2014-12-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* github.py: github gist/issue API added